--- a/src/scss/components/SessionManager.scss
+++ b/src/scss/components/SessionManager.scss
@@ -1,45 +1,45 @@
 @import "../Theme";
-#login{
-  .login-form{
-    text-align: center;
-    width:100dvw;
 
-    input[type="submit" i]{
-      padding-top:1px;
-      padding-bottom:1px;
-      padding-left: 6px;
-      padding-right:6px;
-      outline:0;
-      color:white;
-    }
-    input{
-      margin:3px;
-      border: 0;
-      background: var(--background-primary);
-      outline: 1px solid  var(--border-primary);
-      font-size:20px;
-      font-weight:1;
-        border-radius: 0;
-      width:202px;
-    }
-    a{
-      font-size:20px;
-      font-weight:1;
-      color:white;
-    }
-  }
+.login-form{
+  text-align: center;
+  width:100dvw;
 
-  .logout-button{
-    background:none;
-    border:none;
-    padding:0;
+  input[type="submit" i]{
+    padding-top:1px;
+    padding-bottom:1px;
+    padding-left: 6px;
+    padding-right:6px;
+    outline:0;
+    color:white;
   }
-  img{
-    margin-top:40px;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, -0);
-    max-width:100dvw;
+  input{
+    margin:3px;
+    border: 0;
+    background: var(--background-primary);
+    outline: 1px solid  var(--border-primary);
+    font-size:20px;
+    font-weight:1;
+    border-radius: 0;
+    width:202px;
   }
+  a{
+    font-size:20px;
+    font-weight:1;
+    color:white;
+  }
+}
+
+.logout-button{
+  background:none;
+  border:none;
+  padding:0;
+}
+
+.splash-image{
+  margin-top:40px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, -0);
+  max-width:100dvw;
 }
 
