--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -1,6 +1,9 @@
 @import "./Theme";
 
-body {
+html, body{
+  width:100%;
+  height:100%;
+  overflow:hidden;
   margin:0;
 }
 
@@ -10,7 +13,6 @@ body {
   height:100%;
 
   #main-right{
-    margin-left:4px;
   }
   #main-left{
     display: flex;
@@ -24,6 +26,7 @@ body {
   border:0;
   outline:0;
   background-color: rgba(0,0,0,0);
+  width:100%;
 }
 
 .input-standard::placeholder {
