--- a/src/scss/helpers/Settings.scss
+++ b/src/scss/helpers/Settings.scss
@@ -20,6 +20,10 @@
     z-index: 15;
     color: var(--text-data-title);
   }
+  #set-btn-1{
+    border-top:0;
+    top:33px;
+  }
   #set-btn-2{
     top:60px;
   }
