--- a/src/scss/helpers/SplitterPanel.scss
+++ b/src/scss/helpers/SplitterPanel.scss
@@ -9,7 +9,7 @@
 .splitpanes.default-theme .splitpanes__splitter:before{
     content: "";
     height:20px;
-    width:20px;
+    max-width:0px;
     background-color: rgba(0,0,0,0);
     z-index: 1;
 }
