increase cgb width by block count

--- a/src/scss/components/MixtapeView.scss
+++ b/src/scss/components/MixtapeView.scss
@@ -43,7 +43,7 @@
   cursor: pointer;
   padding-bottom: 1px;
   padding-left: 1px;
-  border: $cardBorder;
+  border: 1px solid var(--border-primary);
   width: 100%;
   min-width: 90px;
   margin: 2px;
