scrapers ui now supported

--- a/src/scss/helpers/Settings.scss
+++ b/src/scss/helpers/Settings.scss
@@ -31,6 +31,10 @@
     border-top:0;
     top:87px;
   }
+  #set-btn-4{
+    border-top:0;
+    top:114px;
+  }
 
   // Slider toggle for cgb sizing
   .vue-slider-dot-handle {
