--- a/src/scss/components/LightBox.scss
+++ b/src/scss/components/LightBox.scss
@@ -110,7 +110,7 @@
           max-height: calc(100% );
           width: 100%;
           height: calc(100%);
-          object-fit: contain;
+          object-fit: scale-down;
         }
       }
 
