--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -12,9 +12,7 @@ html, body{
   width:100%;
   height:100%;
 
-  #main-right{
-  }
-  #main-left{
+  #main-l{
     display: flex;
     flex-flow: column;
     height: calc(100% - 4px);
