--- a/src/scss/helpers/NavSearch.scss
+++ b/src/scss/helpers/NavSearch.scss
@@ -6,6 +6,7 @@
   border: $tableBorder;
   margin: var(--box-margin);
   margin-bottom:1px;
+  height:29px;
 
     background: var(--background-primary);
 
