--- a/src/scss/components/ContentView.scss
+++ b/src/scss/components/ContentView.scss
@@ -4,7 +4,7 @@
   margin-top: -4px;
   border: $tableBorder;
   width: calc(100% - var(--box-margin) - 1px);
-  height: calc(100% - var(--size-margin) - 1px);
+  height: calc(100% - var(--size-margin));
 
   .p-dataview-content{
     z-index: 10;
