--- a/src/scss/components/SessionManager.scss
+++ b/src/scss/components/SessionManager.scss
@@ -35,11 +35,41 @@
   padding:0;
 }
 
+.img4 {
+  flex: 1.944;
+}
+.img5 {
+  flex: 0.75;
+  margin-right:45px;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+
+.splash {
+  display: flex;
+  margin-top:40px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, -0);
+  max-width:900px;
+}
+
 .splash-image{
   margin-top:40px;
   position: relative;
   left: 50%;
   transform: translate(-50%, -0);
-  max-width:100dvw;
+  max-width:80dvw;
+}
+.splash-image-mobile{
+  margin-top:40px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, -0);
+  max-width:20dvw;
 }
 
