--- a/src/scss/components/Tabs.scss
+++ b/src/scss/components/Tabs.scss
@@ -35,6 +35,7 @@
   z-index: 0;
   border: 1px solid var(--border-primary);
   color: var(--text-header);
+  letter-spacing: -0.33px;
 }
 .tab-active{
   opacity: 1!important;
@@ -64,6 +65,8 @@
   overflow: hidden;
   white-space: nowrap;
   font-size:18px;
+    padding: 1px;
+    padding-bottom: 0;
 }
 
 .tab-icon {
