--- a/src/assets/scss/Theme.scss
+++ b/src/assets/scss/Theme.scss
@@ -30,7 +30,7 @@
 .theme-light {
   --color-scheme: light;
   --background-primary: rgb(230, 230, 230);
-  --background-tilt: rgba(0, 0, 0, 0.05);
+  --background-tilt: rgba(230, 230, 230);
   --background-lightbox: rgba(230, 230, 230, 0.7);
 
   --link: #000;
