new scrollbars, font colors, layout

--- a/src/assets/scss/Theme.scss
+++ b/src/assets/scss/Theme.scss
@@ -4,8 +4,8 @@
   --background-tilt: #101010;
   --background-lightbox: rgba(0, 0, 0, 0.7);
 
-  --text-header: #886c27;
-  --text-data-title: #ffc83d;
+  --text-header: #fe7761;
+  --text-data-title: #f8ceff;
   --text-data-descr: #DAC181;
   --text-content: rgba(255, 255, 255, 0.86);
   --text-content-descr: rgba(255, 255, 255, 0.6);
