--- a/src/assets/scss/components/MixtapeView.scss
+++ b/src/assets/scss/components/MixtapeView.scss
@@ -18,6 +18,11 @@
     border-right: $tableBorder!important;
     border-top: $tableBorder!important;
   }
+.os-scrollbar-vertical .os-scrollbar-handle {
+    width: 2px!important;
+    transition: none!important;
+    left: 1px;
+}
 
   .p-dataview-content{
     padding-top: 5px;
@@ -51,7 +56,7 @@
   padding-bottom: 1px;
   padding-left: 1px;
   border: 1px solid var(--border-primary);
-      width: calc(100% - 8px);
+  width: calc(100% - 8px);
   margin: 2px;
   margin-top: 0;
   margin-left: 6px;
@@ -62,7 +67,8 @@
   }
   .title{
     float: left;
-    width: 78%;
+    width: 76%;
+    max-width: calc(100% - 36px)!important;
     text-overflow: clip;
     overflow: hidden;
     white-space: nowrap;
