--- a/src/assets/scss/helpers/Settings.scss
+++ b/src/assets/scss/helpers/Settings.scss
@@ -7,15 +7,13 @@
   height:100vh;
   z-index: 15;
   background: var(--lightbox-back);
-  -webkit-backdrop-filter: blur(14px);
-  backdrop-filter: blur(14px);
   top:0;
   left:0;
 
 
   .settings{
     position: absolute;
-     background: var(--background-lightbox);
+    background: var(--background-lightbox);
     border: 1px solid var(--border-primary);
     top: 50%;
     left: 50%;
@@ -23,7 +21,16 @@
     z-index: 20;
     height: 40%;
     width: 70%;
-    max-width:541px;
+    max-width: 541px;
+    backdrop-filter: blur(14px);
+    border-radius: 5px;
+    box-shadow: 0 0px 106px 127px rgb(0, 0, 0);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 20px;
+    /* text-align: center; */
+    box-sizing: border-box;
+    display: flex;
+    transition: box-shadow .3s ease;
 
     .options {
       background: var(--background-lightbox);
