fixed all compile errors, fixed mix and src fetches, no longer lazy loading them since its not necessary/ could break things

--- a/src/assets/scss/components/ContentView.scss
+++ b/src/assets/scss/components/ContentView.scss
@@ -9,6 +9,7 @@
     position: sticky;
     background: var(--background-primary);
     width: 100%;
+    min-height: 10px; // this causes tabs to overlap correctly, strange that 100% does not work
 
     .grid{
       display: flex;
