--- a/src/assets/scss/components/MixtapeView.scss
+++ b/src/assets/scss/components/MixtapeView.scss
@@ -4,10 +4,25 @@
   margin: var(--box-margin);
   flex: 1 1 auto;
   overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  .folders{
+    height: fit-content;
+    max-height: 20%;
+  }
+  .data-grid-splitter{
+    width: 100%;
+    height:9px;
+        opacity: 0.50;
+    text-align: center;
+  }
+  .mixtapes{
+    flex: 1;
+  }
 }
 
 .mixtapeView{
-  height: calc(100% + 1px);
+  height: 40%;
   margin-top: -4px;
   border: $tableBorder;
   [data-overlayscrollbars~=host], [data-overlayscrollbars~=viewport] {
@@ -26,7 +41,6 @@
 
   .p-dataview-content{
     padding-top: 5px;
-    padding-bottom: 4px;
     z-index: 10;
     position: sticky;
     background: var(--background-primary);
@@ -67,9 +81,8 @@
   }
   .title{
     float: left;
-    width: 76%;
-    max-width: calc(100% - 36px)!important;
-    text-overflow: clip;
+    width: 100%;
+    text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
     letter-spacing: -0.33px;
@@ -78,3 +91,5 @@
 .dgb-0:last-child{
   margin-bottom: 40px;
 }
+
+
