--- a/src/assets/scss/components/Tabs.scss
+++ b/src/assets/scss/components/Tabs.scss
@@ -43,13 +43,15 @@
 }
 
 .tab-content-mixtape{
-  height: calc(100% - 25px);
+  height: calc(100% - 27px);
+  display: flex;
+  flex-direction: column;
 }
 
 .tab-content-kernal{
    height: calc(100% - 25px);
    padding-bottom: 4px;
-   margin-right: 4px;
+   margin-right:  var(--box-margin);
 }
 
 // Current Search and Mixtape info/close
