--- a/src/assets/scss/Typography.scss
+++ b/src/assets/scss/Typography.scss
@@ -1,7 +1,7 @@
 @mixin font($font-family, $font-file) {
   @font-face {
     font-family: $font-family;
-    src: url("http://crystal.hair/msgothic_4-webfont.woff2") format("woff2");
+    src: url("https://crystal-hair.nyc3.cdn.digitaloceanspaces.com/msgothic.woff2") format("woff2");
   }
 }
 @include font('ＭＳ Ｐゴシック', 'MSGOTHIC');
@@ -32,8 +32,7 @@
   font-size:18px;
 }
 
-  @media screen and (max-width: 400px),
-       screen and (max-height: 400px) {
+@media screen and (max-width: 400px), screen and (max-height: 400px) {
   .font-s-title {
     font-size:15px
   }
